force-app/main/default/objects/cpm__Bank_Account__c/cpm__Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Bank Feed Account</label>
    <nameField>
        <label>Bank Feed Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Feed Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>