force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__Account_holder_name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_holder_name__c</fullName>
    <description>The account holder name of the bank account</description>
    <label>Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>