force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Account_Type__c</fullName>
    <description>Whether this is a transaction or a savings account.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>