force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__Automatic_Import_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cpm__Automatic_Import_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this bank account should be included in the nightly transaction import or not.</description>
    <label>Automatic Import Enabled</label>
    <type>Checkbox</type>
</CustomField>