force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__BBAN__c.field-meta.xml
<CustomField>
    <fullName>cpm__BBAN__c</fullName>
    <description>The Basic Bank Account Number.</description>
    <label>BBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>