force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__BIC__c.field-meta.xml
<CustomField>
    <fullName>cpm__BIC__c</fullName>
    <description>The BIC of the bank.</description>
    <label>BIC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>