force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__Default_Bank_Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>cpm__Default_Bank_Account_Currency__c</fullName>
    <description>The default currency of the bank account in ISO 4217.</description>
    <label>Default Bank Account Currency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>