force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__IBAN__c.field-meta.xml
<CustomField>
    <fullName>cpm__IBAN__c</fullName>
    <description>The international bank account number.</description>
    <label>IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>