force-app/main/default/objects/cpm__Bank_Account__c/fields/cpm__Last_Imported_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_Imported_Transaction_Date__c</fullName>
    <description>The last time an nightly automatic import was run successfully for this bank account.</description>
    <label>Last Imported Transaction Date</label>
    <type>DateTime</type>
</CustomField>